编写island模块部分功能

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,12 @@
 android.enableJetifier=true
 android.useAndroidX=true
+VERSION_NAME=1.0.0
+VERSION_CODE=1
+GROUP_ID=com.x930073498.icarus
+LOCAL_REPOSITORY=../repo
+LIB_TYPE=aar
+
+
+ADAPTER_ARTIFACT_ID=adapter
+BOAT_ARTIFACT_ID=boat
+ISLAND_ARTIFACT_ID=island
