--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,10 @@ dependencies {
     debugImplementation project(':boat')
     debugImplementation project(':island')
     debugImplementation project(':islandx')
+    debugImplementation project(':oar')
     releaseImplementation "com.x930073498.icarus:${ADAPTER_ARTIFACT_ID}:${VERSION_NAME}"
     releaseImplementation "com.x930073498.icarus:${ISLAND_ARTIFACT_ID}:${VERSION_NAME}"
     releaseImplementation "com.x930073498.icarus:${ISLANDX_ARTIFACT_ID}:${VERSION_NAME}"
     releaseImplementation "com.x930073498.icarus:${BOAT_ARTIFACT_ID}:${VERSION_NAME}"
+    releaseImplementation "com.x930073498.icarus:${OAR_ARTIFACT_ID}:${VERSION_NAME}"
 }
