--- a/boat/src/main/AndroidManifest.xml
+++ b/boat/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application>
         <provider
             android:name=".BoatProvider"
-            android:authorities="com.x930073498.boat"
+            android:authorities="${applicationId}.com.x930073498.boat"
             android:exported="false" />
     </application>
 </manifest>
