--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,5 @@ BOAT_ARTIFACT_ID=boat
 ISLAND_ARTIFACT_ID=island
 ISLANDX_ARTIFACT_ID=islandX
 OAR_ARTIFACT_ID=oar
+WIND_ARTIFACT_ID=wind
+CLOUD_ARTIFACT_ID=cloud
