--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':adapter', ':app', ':boat', ':island', ':islandx', ':oar'
+include ':adapter', ':app', ':boat', ':island', ':islandx', ':oar', ':wind', ':cloud'
 
 
