--- a/wind/build.gradle
+++ b/wind/build.gradle
@@ -4,40 +4,27 @@ android {
     compileSdkVersion 28
 
 
-
     defaultConfig {
-//        minSdkVersion 21
         minSdkVersion 15
         targetSdkVersion 28
-        versionCode VERSION_CODE as int
-        versionName VERSION_NAME
+        versionCode 1
+        versionName "1.0"
 
 
-        externalNativeBuild {
-            cmake {
-                abiFilters 'armeabi-v7a', 'arm64-v8a'
-            }
-        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    externalNativeBuild {
-        cmake {
-            path "CMakeLists.txt"
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 }
 
 uploadArchives {
@@ -54,7 +41,7 @@ uploadArchives {
 
         // 项目名称
 
-        pom.artifactId = OAR_ARTIFACT_ID
+        pom.artifactId = WIND_ARTIFACT_ID
 
         // 版本号
 
@@ -66,3 +53,4 @@ uploadArchives {
 
 
 uploadArchives.dependsOn 'assembleRelease'
+
