--- a/adapter/build.gradle
+++ b/adapter/build.gradle
@@ -29,6 +29,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    api ('com.alibaba.android:vlayout:1.2.26@aar') {
+        transitive = true
+    }
 }
 
 uploadArchives {
