--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,10 @@ LOCAL_REPOSITORY=../repo
 LIB_TYPE=aar
 
 
-ADAPTER_ARTIFACT_ID=recycler
-BOAT_ARTIFACT_ID=context
-ISLAND_ARTIFACT_ID=request
-ISLANDX_ARTIFACT_ID=islandX
-OAR_ARTIFACT_ID=hook
-WIND_ARTIFACT_ID=thread
-CLOUD_ARTIFACT_ID=reflect
+RECYCLER_ARTIFACT_ID=recycler
+CONTEXT_ARTIFACT_ID=context
+REQUEST_ARTIFACT_ID=request
+REQUESTX_ARTIFACT_ID=requestX
+HOOK_ARTIFACT_ID=hook
+THREAD_ARTIFACT_ID=thread
+REFLECT_ARTIFACT_ID=reflect
