--- a/context/build.gradle
+++ b/context/build.gradle
@@ -42,7 +42,7 @@ uploadArchives {
 
         // 项目名称
 
-        pom.artifactId = BOAT_ARTIFACT_ID
+        pom.artifactId = CONTEXT_ARTIFACT_ID
 
         // 版本号
 
@@ -54,3 +54,20 @@ uploadArchives {
 
 
 uploadArchives.dependsOn 'assembleRelease'
+
+apply plugin: 'com.novoda.bintray-release'
+tasks.withType(Javadoc) {
+    options.encoding = "UTF-8"
+}
+publish{
+    userOrg='x930073498'
+    groupId=GROUP_ID
+    repoName='Icarus'
+    artifactId=CONTEXT_ARTIFACT_ID
+    publishVersion=VERSION_NAME
+    desc='this is a lib about context'
+    bintrayUser='x930073498'
+    bintrayKey='a99363a3248cc44442c04672024fbfa9fdd70104'
+    licences = ['Apache-2.0']
+    dryRun=false
+}
