--- a/hook/build.gradle
+++ b/hook/build.gradle
@@ -54,7 +54,7 @@ uploadArchives {
 
         // 项目名称
 
-        pom.artifactId = OAR_ARTIFACT_ID
+        pom.artifactId = HOOK_ARTIFACT_ID
 
         // 版本号
 
@@ -65,4 +65,22 @@ uploadArchives {
 }
 
 
+uploadArchives.dependsOn 'assembleRelease'
+
+apply plugin: 'com.novoda.bintray-release'
+tasks.withType(Javadoc) {
+    options.encoding = "UTF-8"
+}
+publish{
+    userOrg='x930073498'
+    groupId=GROUP_ID
+    repoName='Icarus'
+    artifactId=HOOK_ARTIFACT_ID
+    publishVersion=VERSION_NAME
+    desc='this is a lib about hook'
+    bintrayUser='x930073498'
+    bintrayKey='a99363a3248cc44442c04672024fbfa9fdd70104'
+    licences = ['Apache-2.0']
+    dryRun=false
+}
 uploadArchives.dependsOn 'assembleRelease'
