--- a/recycler/build.gradle
+++ b/recycler/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven'
-apply plugin: 'com.novoda.bintray-release'
+
 android {
     compileSdkVersion 28
 
@@ -38,6 +38,7 @@ dependencies {
     }
 }
 
+apply plugin: 'com.novoda.bintray-release'
 tasks.withType(Javadoc) {
     options.encoding = "UTF-8"
 }
@@ -45,7 +46,7 @@ publish{
     userOrg='x930073498'
     groupId=GROUP_ID
     repoName='Icarus'
-    artifactId=ADAPTER_ARTIFACT_ID
+    artifactId=RECYCLER_ARTIFACT_ID
     publishVersion=VERSION_NAME
     desc='this is a lib about recyclerView'
     bintrayUser='x930073498'
@@ -67,7 +68,7 @@ uploadArchives {
 
         // 项目名称
 
-        pom.artifactId = ADAPTER_ARTIFACT_ID
+        pom.artifactId = RECYCLER_ARTIFACT_ID
 
         // 版本号
 
