--- a/reflect/build.gradle
+++ b/reflect/build.gradle
@@ -42,7 +42,7 @@ uploadArchives {
 
         // 项目名称
 
-        pom.artifactId = CLOUD_ARTIFACT_ID
+        pom.artifactId = REFLECT_ARTIFACT_ID
 
         // 版本号
 
@@ -53,4 +53,23 @@ uploadArchives {
 }
 
 
+uploadArchives.dependsOn 'assembleRelease'
+
+
+apply plugin: 'com.novoda.bintray-release'
+tasks.withType(Javadoc) {
+    options.encoding = "UTF-8"
+}
+publish{
+    userOrg='x930073498'
+    groupId=GROUP_ID
+    repoName='Icarus'
+    artifactId=REFLECT_ARTIFACT_ID
+    publishVersion=VERSION_NAME
+    desc='this is a lib about reflect'
+    bintrayUser='x930073498'
+    bintrayKey='a99363a3248cc44442c04672024fbfa9fdd70104'
+    licences = ['Apache-2.0']
+    dryRun=false
+}
 uploadArchives.dependsOn 'assembleRelease'
