--- a/request/build.gradle
+++ b/request/build.gradle
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    debugImplementation project(':context')
+    debugImplementation project(":${CONTEXT_ARTIFACT_ID}")
     releaseImplementation "com.x930073498.icarus:${CONTEXT_ARTIFACT_ID}:${VERSION_NAME}"
 }
 
@@ -61,16 +61,17 @@ apply plugin: 'com.novoda.bintray-release'
 tasks.withType(Javadoc) {
     options.encoding = "UTF-8"
 }
-publish{
-    userOrg='x930073498'
-    groupId=GROUP_ID
-    repoName='Icarus'
-    artifactId=REQUEST_ARTIFACT_ID
-    publishVersion=VERSION_NAME
-    desc='this is a lib about permission request and onActivityResult request '
-    bintrayUser='x930073498'
-    bintrayKey='a99363a3248cc44442c04672024fbfa9fdd70104'
+publish {
+    userOrg = 'x930073498'
+    groupId = GROUP_ID
+    repoName = 'Icarus'
+    artifactId = REQUEST_ARTIFACT_ID
+    publishVersion = VERSION_NAME
+    desc = 'this is a lib about permission request and onActivityResult request '
+    bintrayUser = 'x930073498'
+    bintrayKey = 'a99363a3248cc44442c04672024fbfa9fdd70104'
     licences = ['Apache-2.0']
-    dryRun=false
+    dryRun = false
+    website = 'https://github.com/x930073498/Icarus'
 }
 uploadArchives.dependsOn 'assembleRelease'
