--- a/requestX/build.gradle
+++ b/requestX/build.gradle
@@ -28,12 +28,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    debugImplementation project(":${REQUEST_ARTIFACT_ID}")
-    debugImplementation project(":${CONTEXT_ARTIFACT_ID}")
-    releaseImplementation "com.x930073498.icarus:${REQUEST_ARTIFACT_ID}:${VERSION_NAME}"
-    releaseImplementation "com.x930073498.icarus:${CONTEXT_ARTIFACT_ID}:${VERSION_NAME}"
+    implementation project(":${REQUEST_ARTIFACT_ID}")
+    implementation project(":${CONTEXT_ARTIFACT_ID}")
 }
 
 
