--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,17 +46,24 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    debugImplementation project(':recycler')
-    debugImplementation project(':context')
-    debugImplementation project(':request')
-    debugImplementation project(':requestX')
-    debugImplementation project(':hook')
-    debugImplementation project(':thread')
-    releaseImplementation "com.x930073498.icarus:${RECYCLER_ARTIFACT_ID}:${VERSION_NAME}"
-    releaseImplementation "com.x930073498.icarus:${REQUEST_ARTIFACT_ID}:${VERSION_NAME}"
-    releaseImplementation "com.x930073498.icarus:${REQUESTX_ARTIFACT_ID}:${VERSION_NAME}"
-    releaseImplementation "com.x930073498.icarus:${CONTEXT_ARTIFACT_ID}:${VERSION_NAME}"
-    releaseImplementation "com.x930073498.icarus:${HOOK_ARTIFACT_ID}:${VERSION_NAME}"
-    releaseImplementation "com.x930073498.icarus:${THREAD_ARTIFACT_ID}:${VERSION_NAME}"
+    implementation 'androidx.media:media:1.0.0'
+    api project(':recycler')
+    api project(':context')
+    api project(':request')
+    api project(':requestX')
+    api project(':hook')
+    api project(':thread')
+//    releaseImplementation "com.x930073498.icarus:${RECYCLER_ARTIFACT_ID}:${VERSION_NAME}"
+//    releaseImplementation "com.x930073498.icarus:${REQUEST_ARTIFACT_ID}:${VERSION_NAME}"
+//    releaseImplementation "com.x930073498.icarus:${REQUESTX_ARTIFACT_ID}:${VERSION_NAME}"
+//    releaseImplementation "com.x930073498.icarus:${CONTEXT_ARTIFACT_ID}:${VERSION_NAME}"
+//    releaseImplementation "com.x930073498.icarus:${HOOK_ARTIFACT_ID}:${VERSION_NAME}"
+//    releaseImplementation "com.x930073498.icarus:${THREAD_ARTIFACT_ID}:${VERSION_NAME}"
+//    api "com.x930073498.icarus:${RECYCLER_ARTIFACT_ID}:${VERSION_NAME}"
+//    api "com.x930073498.icarus:${REQUEST_ARTIFACT_ID}:${VERSION_NAME}"
+//    api "com.x930073498.icarus:${REQUESTX_ARTIFACT_ID}:${VERSION_NAME}"
+//    api "com.x930073498.icarus:${CONTEXT_ARTIFACT_ID}:${VERSION_NAME}"
+//    api "com.x930073498.icarus:${HOOK_ARTIFACT_ID}:${VERSION_NAME}"
+//    api "com.x930073498.icarus:${THREAD_ARTIFACT_ID}:${VERSION_NAME}"
     implementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
 }
