--- a/request/build.gradle
+++ b/request/build.gradle
@@ -25,8 +25,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    debugImplementation project(":${CONTEXT_ARTIFACT_ID}")
-    releaseImplementation "com.x930073498.icarus:${CONTEXT_ARTIFACT_ID}:${VERSION_NAME}"
+    implementation project(":${CONTEXT_ARTIFACT_ID}")
 }
 
 
