--- a/thread/src/main/AndroidManifest.xml
+++ b/thread/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.x930073498.wind" />
+    package="com.x930073498.thread" />
