--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 android.enableJetifier=true
 android.useAndroidX=true
 
-VERSION_NAME=1.0.4
-VERSION_CODE=1
+VERSION_NAME=1.0.16
+VERSION_CODE=2
 GROUP_ID=com.x930073498.icarus
 LOCAL_REPOSITORY=../repo
 LIB_TYPE=aar
@@ -15,3 +15,4 @@ REQUESTX_ARTIFACT_ID=requestX
 HOOK_ARTIFACT_ID=hook
 THREAD_ARTIFACT_ID=thread
 REFLECT_ARTIFACT_ID=reflect
+VLAYOUT_ARTIFACT_ID=valyout
