--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':recycler', ':app', ':context', ':request', ':requestX', ':hook', ':thread', ':reflect'
+include ':recycler', ':app', ':context', ':request', ':requestX', ':hook', ':thread', ':reflect', ':vlayout'
 
 
